Finalizo el componente Tarea con estilos CSS

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ h1{
 .lista-tareas{
   width: 600px;
   min-height: 500px;
-  background-color: goldenrod;
+  background-color:blanchedalmond;
   padding: 25px;
   margin: 10px;
   border-radius: 25px;
