--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
 }
 
-html, body{
+html, 
+body{
   color:black;
   background-color: white;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -45,6 +46,7 @@ h1{
   background-color:blanchedalmond;
   padding: 25px;
   margin: 10px;
+  justify-content: center;
   border-radius: 25px;
   border-style: double;
 }
