--- a/src/hojaEstilos/tarea.css
+++ b/src/hojaEstilos/tarea.css
@@ -1,39 +1,34 @@
 .tarea-contenedor{
     width: 500px;
-    min-height: 65px;
+    height: 65px;
     background-color: #1b1b32;
-    color: white;
     margin: 5px 0;
-    padding: 8px 15px 8px 20px;
+    padding: 8px 15px 8px 20px;      
     display: flex;
     justify-content: space-between;
     align-items: center;
     border-radius: 20px;
-    border: 1px solid blueviolet;
+    border: 1px solid whitesmoke;
     cursor: pointer;
+    color: white;
+    user-select: none;
 }
 
 .tarea-texto{
     width: 100%;
-    height: 100%;
+    height: 25px;
     font-size: 20px;
     display: flex;
     align-items: center;
-    overflow-wrap: anywhere;
 }
 
 
 .tarea-icono{
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
     margin: 5px;
 }
 
-.tarea-contenedor.finalizada{
-    background-color: blueviolet;
-    text-decoration: line-through;
-    color:cyan;
-}
 
 .tarea-contenedor:nth-child(3n+1){
     background-color: #1b1b32;
@@ -45,4 +40,10 @@
 
 .tarea-contenedor:nth-child(3n+3){
     background-color: #3b3b4f;
+}
+
+.tarea-contenedor.finalizada{
+    background-color: #5a01a7;
+    text-decoration: line-through;
+    color:cyan;
 }
